--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@ body
   padding:50px;
   font:14px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-weight:300;
-  background-color: MintCream;
+  background-color: GhostWhite;
 }
 
 p
