--- a/styles.css
+++ b/styles.css
@@ -36,7 +36,8 @@ a
 {
   font-family: 'Spartan';
   color: DimGray;
-  font-weight:400;
+  font-weight: bold;
+  font-size: 20px;
   text-decoration:none;
 }
 
