--- a/styles.css
+++ b/styles.css
@@ -23,6 +23,7 @@ h1
   display: block;
   margin-left: auto;
   margin-right: auto;
+  max-width: 250px;
 }
 
 .running-header
@@ -45,10 +46,6 @@ a
 {
   width:860px;
   margin:0 auto;
-}
-
-.300-px-wide {
-    width: 300px;
 }
 
 blockquote
@@ -191,7 +188,7 @@ footer
   }
 
   header {
-    padding-right:320px;
+    padding-right: 320px;
   }
 
   section {
@@ -264,4 +261,10 @@ img.alignleft {
     -o-transform: rotate(90deg);
     -ms-transform: rotate(90deg);
     transform: rotate(90deg);
+}
+
+#carouselExampleIndicators.carousel.slide {
+  width: 80%; 
+  margin: auto;
+  max-width: 1000px;
 }
